# Rusty2600

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  migrate.py
.claude/skills/ci-gate/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  scheme_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  singlestep-full.yml
android/: .gitignore  regenerate-bindings.sh  settings.gradle.kts
android/app/: build.gradle.kts
crates/rusty2600-cart/: Cargo.toml
crates/rusty2600-cart/benches/: cart_bench.rs
crates/rusty2600-cart/src/: lib.rs  serde_bytes_array.rs
crates/rusty2600-cheevos/: Cargo.toml  build.rs
crates/rusty2600-cheevos/src/: client.rs  events.rs  ffi.rs  http.rs  lib.rs  memory.rs  util.rs
crates/rusty2600-core/: Cargo.toml
crates/rusty2600-core/benches/: frame_bench.rs
crates/rusty2600-core/src/: bus.rs  lib.rs  movie.rs  save_state.rs  scheduler.rs
crates/rusty2600-cpu/: Cargo.toml
crates/rusty2600-cpu/benches/: cpu_bench.rs
crates/rusty2600-cpu/src/: bus.rs  cpu.rs  lib.rs  status.rs
crates/rusty2600-cpu/tests/: singlestep_test.rs
crates/rusty2600-frontend/: Cargo.toml
crates/rusty2600-frontend/examples/: dump_frame.rs
crates/rusty2600-frontend/src/: app.rs  audio.rs  audio_ring.rs  cheevos.rs  cli.rs  config.rs  emu_thread.rs  gfx.rs  help_tui.rs  input.rs  lib.rs  main.rs  netplay_session.rs  palette.rs  present_buffer.rs  rom_archive.rs  runahead.rs  scripting.rs  shader_pass.rs  share_link.rs  shell.rs  slang_preset.rs  sprite_pack.rs  wasm.rs
crates/rusty2600-frontend/src/debugger/: access_counter.rs  assembler.rs  callstack.rs  cart_info_panel.rs  cheevos_panel.rs  disasm.rs  event_panel.rs  expr.rs  lua_console_panel.rs  memory_compare_panel.rs  mod.rs  perf_panel.rs  pmb_panel.rs  tastudio_panel.rs  trace_panel.rs  watch_panel.rs
crates/rusty2600-frontend/tests/: hd_pack_splice.rs
crates/rusty2600-frontend/tests/fixtures/hd_pack_demo/: manifest.toml
crates/rusty2600-frontend/web/: Trunk.toml  index.html  manifest.json  sw.js
crates/rusty2600-gfx-shaders/: Cargo.toml
crates/rusty2600-gfx-shaders/src/: lib.rs
crates/rusty2600-mobile/: Cargo.toml  uniffi-bindgen.rs
crates/rusty2600-mobile/src/: lib.rs
crates/rusty2600-netplay/: Cargo.toml
crates/rusty2600-netplay/src/: checksum.rs  config.rs  frame_advance.rs  lib.rs  session.rs  stun.rs  webrtc.rs
crates/rusty2600-netplay/web/: Trunk.toml  cdp_verify.py  index.html
crates/rusty2600-riot/: Cargo.toml
crates/rusty2600-riot/benches/: riot_bench.rs
crates/rusty2600-riot/src/: lib.rs  serde_bytes_array.rs
crates/rusty2600-script/: Cargo.toml
crates/rusty2600-script/src/: bus.rs  engine.rs  lib.rs  lock.rs  log.rs  overlay.rs
crates/rusty2600-test-harness/: Cargo.toml
crates/rusty2600-test-harness/src/: lib.rs
crates/rusty2600-test-harness/tests/: accuracy_battery.rs  golden_log_test.rs  klaus_test.rs  mapper_tier_honesty.rs
crates/rusty2600-thumb/: Cargo.toml
crates/rusty2600-thumb/src/: cycles.rs  lib.rs  mam.rs  memory.rs  registers.rs  status.rs  thumb.rs
crates/rusty2600-tia/: Cargo.toml
crates/rusty2600-tia/benches/: tia_bench.rs
crates/rusty2600-tia/src/: audio.rs  lib.rs  paddle.rs
docs/: SALVAGE_MANIFEST.md  STATUS.md  architecture.md  cart.md  compatibility.md  cpu.md  frontend.md  glossary.md  mobile.md  movie.md  netplay.md  performance.md  riot.md  scheduler.md  scripting.md  testing-strategy.md  thumb.md  tia.md
docs/adr/: 0001-master-clock-lockstep-scheduler.md  0002-fractional-timebase-refactor.md  0003-accuracy-tiering-honesty-gate.md  0004-determinism-contract.md  0005-tia-revision-model.md  0006-power-on-ram-seeding.md  0007-save-state-versioning.md  0008-netplay-webrtc-async-boundary.md
ios/: regenerate-bindings.sh
ios/Rusty2600/Sources/: AudioEngine.swift  ContentView.swift  EmulatorView.swift  EmulatorViewModel.swift  PaddleControlView.swift  Rusty2600App.swift  SaveSlots.swift  SaveStateSlotPickerView.swift
ios/RustyMobileFFI/: Package.swift
ios/RustyMobileFFI/Rusty2600Mobile.xcframework/: NOTE.md
ref-docs/: 2026-07-01-supplemental-audio-hardware-model.md  README.md  research-report.md
screenshots/: README.md
scripts/: bench_regression_check.sh  update_bus.py  update_riot.py  update_tia.py
tests/cpu-timing/: README.md  fetch-vectors.py
tests/cpu-timing/singlestep-6502/: 00.json  01.json  02.json  03.json  05.json  06.json  07.json  08.json  09.json  0A.json  0C.json  0D.json  0E.json  0F.json  10.json  11.json  12.json  13.json  15.json  16.json  17.json  18.json  19.json  1B.json  1D.json  1E.json  1F.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  2A.json  2B.json  2C.json  (+193 more)
tests/golden/: klaus_functional_test_gopher2600.trace
tests/roms/: README.md
tests/roms/homebrew/: Bird and Beans (NTSC).a26  README.md  (+5 more)
to-dos/: ROADMAP.md
to-dos/phase-0-foundation/: overview.md  sprint-1-workspace-substrate.md
to-dos/phase-1-cpu-golden-log/: overview.md  sprint-1-documented-core.md  sprint-1-documented-opcodes.md  sprint-2-undocumented-decimal.md
to-dos/phase-2-scheduler-video/: overview.md  sprint-1-bus-and-beam.md  sprint-1-scheduler-sync.md  sprint-2-tia-beam-racing.md
to-dos/phase-3-audio/: overview.md  sprint-1-tia-audio.md  sprint-2-hardware-accurate-model.md
to-dos/phase-4-carts-mappers/: overview.md  sprint-1-core-curated-boards.md  sprint-2-besteffort-boards.md
to-dos/phase-5-frontend/: overview.md  sprint-1-egui-wasm.md  sprint-1-shell-and-input.md  sprint-2-pacing-and-state.md  sprint-2-states-rewind.md  sprint-3-wasm-thread.md  sprint-4-debugger.md
to-dos/phase-6-accuracy-to-100/: overview.md  sprint-1-accuracy.md  sprint-2-pass-gate.md
to-dos/phase-7-breadth/: overview.md  sprint-1-region-timing.md
to-dos/phase-8-reach/: overview.md  sprint-1-advanced-features.md  sprint-2-ra-and-tas.md
to-dos/plans/: commercial-corpus-plan.md  rom-acquisition-list.md  rom-seeding-runbook.md
(+19 files in other folders)
