[workspace]
resolver = "2"
members = [
    "crates/rusty2600-core",
    "crates/rusty2600-cpu",
    "crates/rusty2600-tia",
    "crates/rusty2600-riot",
    "crates/rusty2600-cart",
    "crates/rusty2600-thumb",
    "crates/rusty2600-cheevos",
    "crates/rusty2600-frontend",
    "crates/rusty2600-gfx-shaders",
    "crates/rusty2600-test-harness",
    "crates/rusty2600-script",
    "crates/rusty2600-netplay",
    "crates/rusty2600-mobile",
]

[workspace.package]
version = "2.11.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
authors = ["DoubleGate <parobek@gmail.com>"]
repository = "https://github.com/doublegate/Rusty2600"

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
criterion = "0.5"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
