[package]
name = "rusty2600-cart"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
serde.workspace = true
bitflags = "2"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "cart_bench"
harness = false

[lints]
workspace = true
