[package]
name = "rusty2600-cart"
version = "2.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
serde.workspace = true
bitflags = "2"
rusty2600-thumb = { path = "../rusty2600-thumb", version = "2.3.0" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "cart_bench"
harness = false

[lints]
workspace = true
