[package]
name = "rusty2600-core"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
serde.workspace = true
rusty2600-cpu = { path = "../rusty2600-cpu", version = "1.0.0", default-features = false }
rusty2600-tia = { path = "../rusty2600-tia", version = "1.0.0", default-features = false }
rusty2600-riot = { path = "../rusty2600-riot", version = "1.0.0", default-features = false }
rusty2600-cart = { path = "../rusty2600-cart", version = "1.0.0", default-features = false }

[lints]
workspace = true
