[package]
name = "rusty2600-core"
version = "2.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []
# Forwards to `rusty2600-tia/hd-pack` -- Cargo features don't propagate through a dependency
# chain automatically, so each crate between `rusty2600-tia` and `rusty2600-frontend` must
# re-declare and forward this explicitly.
hd-pack = ["rusty2600-tia/hd-pack"]

[dependencies]
serde.workspace = true
postcard = { version = "1", default-features = false, features = ["alloc"] }
rusty2600-cpu = { path = "../rusty2600-cpu", version = "2.3.0", default-features = false }
rusty2600-tia = { path = "../rusty2600-tia", version = "2.3.0", default-features = false }
rusty2600-riot = { path = "../rusty2600-riot", version = "2.3.0", default-features = false }
rusty2600-cart = { path = "../rusty2600-cart", version = "2.3.0", default-features = false }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "frame_bench"
harness = false

[lints]
workspace = true
