[package]
name = "rusty2600-cpu"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
serde.workspace = true
bitflags = { version = "2", features = ["serde"] }

[lints]
workspace = true
