[package]
name = "rusty2600-cpu"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
serde.workspace = true
bitflags = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
