[package]
name = "rusty2600-cpu"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
serde.workspace = true
bitflags = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
criterion.workspace = true

[[bench]]
name = "cpu_bench"
harness = false

[lints]
workspace = true
