[package]
name = "rusty2600-frontend"
description = "Rusty2600: cross-platform Atari 2600 / VCS emulator binary (winit + wgpu + cpal + egui)"
version = "2.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["atari", "2600", "vcs", "emulator", "wgpu"]
categories = ["emulators", "games"]

[lib]
name = "rusty2600_frontend"
path = "src/lib.rs"
# `cdylib` produces the `.wasm` artifact that wasm-bindgen + trunk consume to
# ship the browser frontend; `rlib` keeps the normal crate-graph integration so
# the `[[bin]]` below depends on the lib without duplicating sources.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rusty2600"
path = "src/main.rs"

[features]
# `wasm-winit` (real as of v2.5.0): the actual native winit+wgpu+egui `App`
# (`app.rs`/`gfx.rs`/`shader_pass.rs`/`emu_thread.rs`) compiled for
# `wasm32-unknown-unknown` — see `src/wasm.rs`'s `run_winit()` and its
# module doc for exactly what does/doesn't work yet on this target
# (`docs/frontend.md` tracks the authoritative status). `wasm-canvas`
# stays the OLDER, simpler, still-fully-working fallback (a bare canvas-2D
# `requestAnimationFrame` bootstrap, `src/wasm.rs`'s `run_canvas()`) — kept
# as a safety net in case the real build regresses or a browser doesn't
# support WebGL2/WebGPU. Exactly one of the two should be built for wasm32
# at a time (see `web/index.html`'s `data-cargo-*` attributes, which
# explicitly disable default features and select only ONE of the two —
# currently `wasm-canvas`, the actual deployed GH-Pages build, since
# `wasm-winit`'s rendering isn't yet confirmed working in a real browser;
# see `docs/frontend.md`'s wasm status section for exactly why and how to
# flip it once confirmed). `emu-thread`/`debug-hooks` below are NOT
# wasm-safe for either wasm feature — see their own doc comments. Neither
# `wasm-winit` nor `wasm-canvas` does anything on native.
# `help-tui` adds the ratatui terminal help browser (native-only).
#
# `emu-thread` runs `EmuCore` on a dedicated thread (paced by the audio ring
# buffer's fill ratio) instead of stepping synchronously inside `render()`.
# It needs `EmuCore: Send`, which in turn needs `rusty2600-cart::Board`'s
# implementors to be `Send` — true since `Bus::board` is a concrete
# `Cartridge` enum (not `Box<dyn Board>`), confirmed by a successful
# `--features emu-thread` build (T-0503-001, closing the stale blocker note
# this comment used to carry). Default-on as of v0.1.1.
#
# `debug-hooks` arms the real debugger (`src/debugger/`): live 6507/TIA/RIOT
# register views, a peek-based memory hex viewer, breakpoints, and a
# standalone disassembler. Was an unwired forward placeholder through v0.4.x;
# real as of v0.5.0. Default-on (same precedent as `emu-thread`) — turn it
# off explicitly (`--no-default-features --features wasm-winit,help-tui,
# emu-thread`) for a debugger-free build.
#
# Native `default` is UNCHANGED by the v2.5.0 wasm-winit work below — still
# `emu-thread`+`debug-hooks`+`help-tui` on. The wasm-winit build must NOT use
# these native defaults (see `web/index.html`): `emu-thread` spawns a real
# `std::thread`, which `wasm32-unknown-unknown` doesn't support without
# SharedArrayBuffer+COOP/COEP+atomics (out of scope); `debug-hooks` pulls in
# `TastudioSaveBranch`'s `rfd::FileDialog` call, and `rfd` is a
# native-only dependency (not available to the wasm32 target at all, see the
# `[target.'cfg(not(target_arch = "wasm32"))'.dependencies]` block below) —
# both are explicitly later-release scope (`v2.9.0`'s wasm debugger overlay).
default = ["wasm-winit", "help-tui", "emu-thread", "debug-hooks"]
wasm-winit = []
wasm-canvas = []
emu-thread = []
help-tui = ["dep:ratatui"]
debug-hooks = []
# Output-only TIA tile-source export for an HD-pack / texture-replacement loader.
hd-pack = []
# RetroAchievements integration. Pulls in `rusty2600-cheevos` (the safe
# `RaClient` wrapper over the vendored rcheevos C library). Off by default so
# the shipped build links no extra C. `rusty2600-cheevos` itself compiles to
# an empty crate on wasm32 (`#![cfg(not(target_arch = "wasm32"))]`), so this
# feature is a real no-op there rather than something that needs its own
# wasm-specific exclusion.
retroachievements = ["dep:rusty2600-cheevos"]
# Lua scripting (`emu` table over a live game). Pulls in `rusty2600-script`
# (`mlua`, vendoring Lua 5.4 via a C compiler) — off by default so the
# shipped build links no extra C, same rationale as `retroachievements`.
# Native-only: `rusty2600-script` is a `std`-only crate, and this feature's
# frontend module is `cfg(not(target_arch = "wasm32"))`-gated.
scripting = ["dep:rusty2600-script", "dep:mlua"]
# 2-player rollback netplay (direct-IP/LAN only — see `docs/netplay.md`).
# Pulls in `rusty2600-netplay` (wraps `ggrs`). Off by default; native-only
# for the same reason as `scripting` (UDP sockets have no wasm32 story yet).
netplay = ["dep:rusty2600-netplay"]

[dependencies]
rusty2600-core = { path = "../rusty2600-core", version = "2.3.0" }
rusty2600-cart = { path = "../rusty2600-cart", version = "2.3.0" }
rusty2600-cheevos = { path = "../rusty2600-cheevos", version = "2.3.0", optional = true }
rusty2600-gfx-shaders = { path = "../rusty2600-gfx-shaders", version = "2.3.0" }

# === The always-on egui shell stack ==========================================
# v0.1 scaffold note: these are intentionally pinned to the exact versions the
# RustyNES / RustySNES frontends resolve, so a later lift-and-adapt of a sibling
# module drops in without a version fight. See `references/frontend_reuse.md`.
winit = "0.30"
# `default-features = false` here + backend features added per-target below. NOTE: this does NOT
# fully isolate the wasm32 build from wgpu's `webgpu` feature in practice — `egui-wgpu`'s own
# unconditional `wgpu` dependency re-adds wgpu's defaults (including `webgpu`) via Cargo's
# per-crate feature unification across the whole dependency graph, regardless of what this
# `Cargo.toml` requests. See the wasm32 `[target...]` block's comment for the full investigation
# and its honest, unresolved conclusion.
wgpu = { version = "29", default-features = false, features = ["wgsl", "std"] }
cpal = "0.18"
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = { version = "0.35", default-features = false, features = ["links", "wayland", "x11"] }
thiserror = "2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
# ROM-from-.zip loading (native `OpenRom` dialog + the wasm demo's file
# input, `src/rom_archive.rs`). Reads only, from an in-memory `Cursor` (never
# touches a real filesystem), so it builds cleanly for wasm32 too.
# `default-features = false` + `deflate` only: `deflate` pulls in flate2's
# pure-Rust `rust_backend` (miniz_oxide) — no C toolchain — for decompression
# (the `deflate-flate2` marker feature alone does NOT actually enable the
# `flate2` optional dep; `deflate` is the feature that does). No
# bzip2/lzma/zstd/xz/aes-crypto (unneeded codecs/encryption that would only
# bloat the native binary and the wasm bundle for no benefit — ROM zips are
# plain Deflate or Store).
zip = { version = "8", default-features = false, features = ["deflate"] }

# Already transitive deps of wgpu; direct here is free.
pollster = "0.4"
bytemuck = "1"
web-time = "1.1"

# Native-only deps (gilrs / rfd / directories / clap / ratatui). A browser tab
# has no gamepad-via-gilrs, no rfd dialog, no terminal — the wasm builds never
# see these (the modules are `cfg(not(target_arch = "wasm32"))`-gated).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gilrs = "0.11"
rfd = "0.17"
directories = "6"
# Real native GPU backends (unrelated to wasm32's `webgl`-only block below) — `parking_lot` is
# wgpu's own default runtime-locking impl, not on by the bare `["wgsl", "std"]` base above.
wgpu = { version = "29", features = ["dx12", "metal", "vulkan", "gles", "parking_lot"] }
# clap 4 styled `--help` + `help <topic>` + shell completions (unconditional);
# the interactive ratatui TUI browser is behind the default-on `help-tui` feature.
clap = { version = "4", features = ["derive", "color", "cargo"] }
clap_complete = "4"
anstyle = "1"
ratatui = { version = "0.30", optional = true }
rusty2600-script = { path = "../rusty2600-script", version = "2.3.0", optional = true }
rusty2600-netplay = { path = "../rusty2600-netplay", version = "2.3.0", optional = true }
# Referenced directly (`mlua::Error`) by the `scripting`-gated frontend
# module; version/features must match `rusty2600-script`'s own pin exactly.
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }

# wasm32 target deps. The chip stack is `no_std + alloc`, so the browser build
# only needs the wasm-bindgen + web-sys bridge here.
# GOTCHA: the wasm-bindgen CLI pin in web/Trunk.toml MUST equal the resolved
# wasm-bindgen LIBRARY version in Cargo.lock (grep -A1 'name = "wasm-bindgen"').
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Adds `webgl` on top of whatever the workspace's unified feature set already resolves for wgpu
# (see the base `[dependencies]` entry above). NOTE, from direct investigation: this alone does
# NOT reliably avoid wgpu's `webgpu` backend path being active for wasm32 — `egui-wgpu` (an
# unconditional dependency, no target split of its own) pulls in `wgpu`'s OWN default features
# regardless of what this crate's `Cargo.toml` requests, and Cargo unifies features per-crate
# across the whole dependency graph, so `webgpu` stays compiled in even with `default-features =
# false` set on the base entry above. Confirmed by direct testing in a headless-Chromium+
# SwiftShader sandbox (no real `navigator.gpu`): `Instance::request_adapter` reports "gl support
# not compiled in" / `webgpu found no adapters` — i.e. genuinely no working adapter was returned
# in that specific environment, even though `wgpu-hal`'s `gles` feature is provably present per
# `cargo tree -e features` (wgpu's own source hints at why: `src/backend/webgpu.rs` carries a
# `// TODO: supported_backends should also include wgpu-core-based backends`, suggesting the
# webgpu-vs-wgpu-core dispatch decision for wasm32 may be a build-script-level exclusivity, not a
# simple feature-flag AND). This is UNVERIFIED in a real browser with real GPU access (this
# sandbox has none) — real end users likely fare better (real WebGPU support, or a real
# hardware-accelerated GL backend, neither available here), but this is honestly NOT confirmed
# working end-to-end. See `docs/frontend.md`'s wasm-winit status section.
wgpu = { version = "29", features = ["webgl"] }
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
    "Document", "Window", "Element", "HtmlElement", "HtmlCanvasElement",
    "Event", "EventTarget", "KeyboardEvent", "HtmlInputElement", "FileReader",
    "FileList", "File",
    "CanvasRenderingContext2d", "ImageData", "Storage",
    "AudioContext", "AudioDestinationNode", "AudioNode", "AudioBuffer",
    "AudioBufferSourceNode", "AudioScheduledSourceNode",
] }

[dev-dependencies]
# Validate the embedded WGSL at test time with the same naga wgpu uses at run
# time, so a shader error fails CI instead of aborting the app.
naga = { version = "29", features = ["wgsl-in"] }

[lints]
workspace = true
