[package]
name = "rusty2600-gfx-shaders"
description = "WGSL post-process shader sources for Rusty2600's composable shader stack"
version = "2.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[lints]
workspace = true
