[package]
name = "rusty2600-mobile"
version = "1.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# `cdylib` is what UniFFI's generated Kotlin/Swift bindings load at runtime
# (via `libuniffi_rusty2600_mobile.so` on Android, a `.a`/xcframework on iOS);
# `rlib` keeps normal crate-graph integration for this crate's own host tests.
crate-type = ["cdylib", "rlib"]

[[bin]]
# Generates the Kotlin/Swift bindings from this crate's own compiled
# metadata (`uniffi::uniffi_bindgen_main`); not shipped, host-tooling only —
# gated behind `bindgen` so the shipped mobile `cdylib` never links `clap`
# (`uniffi/cli`'s dependency) just to satisfy this one dev-time binary.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["bindgen"]

[features]
bindgen = ["uniffi/cli"]

[dependencies]
rusty2600-core = { path = "../rusty2600-core", version = "1.11.0" }
rusty2600-cart = { path = "../rusty2600-cart", version = "1.11.0" }
uniffi = "0.28"
thiserror = "2.0"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[lints]
workspace = true
