[package]
name = "rusty2600-netplay"
description = "2-player rollback netplay for Rusty2600 (native UDP transport, wraps ggrs)"
version = "2.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

# std-only, native-only (UDP sockets): not part of the no_std gate build.
# Depends on rusty2600-core (System, SaveState, MovieFrame) — never the
# reverse, matching the workspace's one-directional crate graph.
[lints]
workspace = true

[dependencies]
rusty2600-core = { path = "../rusty2600-core", version = "2.3.0" }
ggrs = "0.13"
serde = { version = "1", features = ["derive"] }
# `[2.3.0]`'s STUN client (`crate::stun`): a sans-IO RFC 5389 codec, zero
# networking/async dependencies of its own, fitting this crate's plain
# std::net::UdpSocket convention with no new async-runtime dependency.
# `bytecodec` is `stun_codec`'s own encode/decode trait crate (its
# `DecodeExt`/`EncodeExt` extension traits aren't re-exported at
# `stun_codec`'s crate root, so this needs to be a direct dependency too).
stun_codec = "0.4.0"
bytecodec = "0.5"
# `[2.3.0]`'s `PunchedUdpSocket` (`crate::session`) needs the exact wire
# format GGRS's own bundled `UdpNonBlockingSocket` uses (bincode-encoded
# `ggrs::Message`) — GGRS depends on the same bincode major version
# transitively, pinned here to match rather than risk a resolver-driven
# version drift between the two.
bincode = "1.3"

[dev-dependencies]
rusty2600-cart = { path = "../rusty2600-cart", version = "2.3.0" }
